--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="string_default">默认值</string>
     <string name="news">今日头条</string>
     <string name="write_location_phone">需要读写权限、定位权限、手机状态权限</string>
+    <string name="error_text">发生未知错误</string>
 </resources>
